--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "start": "parcel index.html --open",
-    "build": "parcel build index.html --no-optimize",
+    "build": "parcel build index.html --dist-dir dist",
+    "vercel-build": "node build.js",
     "dev": "parcel index.html"
   },
   "dependencies": {
